docs: fix Java version to 25, add ZGC flags, note compat check workaround